@@ -797,6 +797,7 @@
                                     <property name="column_spacing">3</property>
                                     <property name="reorderable">True</property>
                                     <property name="width_request">1</property>
+                                    <property name="has_tooltip">True</property>
                                   </widget>
                                 </child>
                               </widget>
